Add comment in tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,8 @@ set -g mouse on
 
 set-window-option -g mode-keys vi
 
+# <C-a>[ to enter vi mode
+# <C-c> to exit vi mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
