--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,10 @@ set -g mouse on
 
 set-window-option -g mode-keys vi
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # <C-a>[ to enter vi mode
 # <C-c> to exit vi mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
