--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,8 +48,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @themepack 'powerline/default/cyan'
 
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
