--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -99,6 +99,14 @@ input "type:keyboard" {
     bindsym $mod+i exec $browser
     bindsym Print exec $screenshot
     bindsym $mod+Ctrl+l exec $lockscreen
+    bindsym XF86KbdBrightnessUp exec ~/.config/sway/screen-brightness.sh +
+    bindsym XF86KbdBrightnessDown exec ~/.config/sway/screen-brightness.sh -
+    bindsym XF86MonBrightnessUp exec ~/.config/sway/screen-brightness.sh +
+    bindsym XF86MonBrightnessDown exec ~/.config/sway/screen-brightness.sh -
+
+    bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+    bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+    bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -258,3 +266,9 @@ bar {
 # assign [class="Skype"] $ws7
 
 include /etc/sway/config.d/*
+
+# Notification Daemon
+exec swaync
+
+# Toggle control center
+bindsym $mod+Shift+n exec swaync-client -t -sw
