--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -19,7 +19,7 @@ set $term ghostty
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 # set $menu dmenu_path | wmenu | xargs swaymsg exec --
-set $menu rofi -combi-modi "window,drun,ssh" -show combi
+set $menu "rofi -show combi -modes combi -combi-modes 'window,drun,run'"
 set $browser microsoft-edge
 # set $screenshot XDG_SESSION_TYPE=wayland flameshot gui
 # set $screenshot T_QPA_PLATFORM=wayland-egl XDG_SESSION_TYPE=wayland flameshot gui
@@ -273,3 +273,8 @@ exec swaync
 
 # Toggle control center
 bindsym $mod+Shift+n exec swaync-client -t -sw
+
+# for_window [app_id="flameshot"] floating enable, fullscreen disable, move absolute position 0 0, border pixel 0
+# exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
+# exec hash dbus-update-activation-environment 2>/dev/null && \
+#      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
