--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -79,6 +79,8 @@ floating_modifier $mod
 #     xkb_options grp:alt_shift_toggle
 # }
 
+exec "setxkbmap -layout us,ca"
+exec "setxkbmap -option 'grp:alt_shift_toggle'"
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
@@ -98,7 +100,7 @@ bindsym $mod+Shift+q kill
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 bindsym $mod+d exec $menu
-# bindsym Ctrl+Shift+Space exec $menu
+bindsym Ctrl+Shift+space exec $menu
 
 bindsym $mod+i exec $browser
 bindsym Print exec $screenshot
