Fix i3 keyboard language switch mapping

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -79,8 +79,8 @@ floating_modifier $mod
 #     xkb_options grp:alt_shift_toggle
 # }
 
-exec "setxkbmap -layout us,ca"
-exec "setxkbmap -option 'grp:alt_shift_toggle'"
+exec_always "setxkbmap -layout 'us,ca' -option 'grp:alt_shift_toggle'"
+
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
