--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -23,8 +23,11 @@ set $term ghostty
 # set $menu dmenu_path | wmenu | xargs swaymsg exec --
 set $menu "rofi -show combi -modes combi -combi-modes 'window,drun,run'"
 set $browser microsoft-edge
-set $screenshot flameshot gui
+# set $screenshot flameshot gui
+set $screenshot "maim --format=png --select | xclip -selection clipboard -t image/png"
+
 set $lockscreen i3lock -i /home/sampoi/Pictures/Wallpapers/BSL.png
+set $resetMonitor "xrandr --auto"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -90,8 +93,9 @@ bindsym $mod+d exec $menu
 bindsym Ctrl+Shift+space exec $menu
 
 bindsym $mod+i exec $browser
-bindsym Print exec $screenshot
+bindsym Print exec --no-startup-id $screenshot
 bindsym $mod+Ctrl+l exec $lockscreen
+bindsym $mod+Shift+m exec $resetMonitor
 
 # change focus
 bindsym $mod+h focus left
